--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tracing-error = "*"
 tracing-log = "*"
 tracing-subscriber = { version = "*", features = ["env-filter"] }
 tts = "0.26.3"
+chrono = "0.4.42"
